fix vertical spacing on summary / itinerary page

--- a/app/component/itinerary/itinerary.scss
+++ b/app/component/itinerary/itinerary.scss
@@ -61,7 +61,6 @@ $itinerary-tab-switch-height: 28px;
   border-top: solid 1px $light-gray;
   border-bottom: solid 1px $light-gray;
   background: rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
 }
 
 .itinerary-icon {
